feat: modify connection string in appsettings

--- a/aspnet-core/src/RMG.EventRegistration.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/RMG.EventRegistration.HttpApi.Host/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=EventRegistration;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.\\SQLEXPRESS;Database=RMGEventsRegistration;Trusted_Connection=True;TrustServerCertificate=True;Connect Timeout=120;Command Timeout=600;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44315",
