--- a/aspnet-core/src/RMG.EventRegistration.DbMigrator/appsettings.json
+++ b/aspnet-core/src/RMG.EventRegistration.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=EventRegistration;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.\\SQLEXPRESS;Database=RMGEventsRegistration;Trusted_Connection=True;TrustServerCertificate=True;Connect Timeout=120;Command Timeout=600;"
   },
   "OpenIddict": {
     "Applications": {
