feat(backend): implement domain business, services and controllers

--- a/aspnet-core/src/RMG.EventRegistration.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/RMG.EventRegistration.HttpApi.Host/appsettings.json
@@ -15,5 +15,15 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "qXxn1Qx907dUX9vL"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "System": "Warning",
+      "Volo.Abp": "Warning"
+    }
   }
 }
+
